--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
+alembic==0.8.5
 aniso8601==1.1.0
 Flask==0.10.1
+Flask-Migrate==1.8.0
 Flask-RESTful==0.3.5
+Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 itsdangerous==0.24
 Jinja2==2.8
+Mako==1.0.4
 MarkupSafe==0.23
-python-dateutil==2.5.1
+python-dateutil==2.5.0
+python-editor==0.5
 pytz==2016.1
 six==1.10.0
 SQLAlchemy==1.0.12
 Werkzeug==0.11.4
+wheel==0.24.0
