--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ itsdangerous==0.24
 Jinja2==2.8
 Mako==1.0.4
 MarkupSafe==0.23
+marshmallow==2.6.1
 python-dateutil==2.5.0
 python-editor==0.5
 pytz==2016.1
