--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==0.8.5
 aniso8601==1.1.0
 Flask==0.10.1
+Flask-HTTPAuth==3.1.0
 Flask-Migrate==1.8.0
 Flask-RESTful==0.3.5
 Flask-Script==2.0.5
@@ -10,6 +11,7 @@ Jinja2==2.8
 Mako==1.0.4
 MarkupSafe==0.23
 marshmallow==2.6.1
+passlib==1.6.5
 python-dateutil==2.5.0
 python-editor==0.5
 pytz==2016.1
