--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==0.8.5
 aniso8601==1.1.0
 Flask==0.10.1
 Flask-HTTPAuth==3.1.0
+Flask-JWT==0.3.2
 Flask-Migrate==1.8.0
 Flask-RESTful==0.3.5
 Flask-Script==2.0.5
@@ -12,10 +13,10 @@ Mako==1.0.4
 MarkupSafe==0.23
 marshmallow==2.6.1
 passlib==1.6.5
+PyJWT==1.4.0
 python-dateutil==2.5.0
 python-editor==0.5
 pytz==2016.1
 six==1.10.0
 SQLAlchemy==1.0.12
 Werkzeug==0.11.4
-wheel==0.24.0
