--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Jinja2==2.8
 Mako==1.0.4
 MarkupSafe==0.23
 marshmallow==2.6.1
+marshmallow-jsonapi==0.6.0
 passlib==1.6.5
 PyJWT==1.4.0
 python-dateutil==2.5.0
@@ -20,3 +21,4 @@ pytz==2016.1
 six==1.10.0
 SQLAlchemy==1.0.12
 Werkzeug==0.11.4
+wheel==0.24.0
