--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,10 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "angular": "^1.5.3",
-    "angular-route": "^1.5.3"
+    "angular-route": "^1.5.3",
+    "angular": "^1.5.4"
+  },
+  "resolutions": {
+    "angular": "1.5.3"
   }
 }
