--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "tslint": "^3.7.4",
     "typescript": "^1.8.10"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp": "^3.9.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
