--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "typescript": "^1.8.10"
   },
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-typescript": "^2.13.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
