--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "angular": "^1.5.4",
     "angular-ui-router": "^0.2.18",
     "angular-material": "^1.0.7",
-    "jquery": "^2.2.3"
+    "jquery": "^2.2.3",
+    "bootstrap-sass": "^3.3.6"
   },
   "resolutions": {
     "angular": "^1.5.4"
