--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "./typings.d.ts",
     
     "static/client/interfaces/flames.ts",
+    "static/client/interfaces/user.ts",
     
     "static/client/controllers/homeController.ts",
     
