--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "static/client/interfaces/user.ts",
     
     "static/client/controllers/homeController.ts",
+    "static/client/controllers/loginController.ts",
     
     "static/client/app.ts"
   ]
