--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
     "static/client/interfaces/flames.ts",
     "static/client/interfaces/user.ts",
     
+    "static/client/services/userService.ts",
+    
     "static/client/controllers/homeController.ts",
     "static/client/controllers/loginController.ts",
     
