--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "static/client/interfaces/flame.ts",
     "static/client/interfaces/user.ts",
     
+    "static/client/services/flameService.ts",
     "static/client/services/userService.ts",
     
     "static/client/controllers/homeController.ts",
