--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aniso8601==1.1.0
 Flask==0.10.1
 Flask-HTTPAuth==3.1.0
 Flask-JWT==0.3.2
+Flask-JWT-Extended==1.0.3
 Flask-Migrate==1.8.0
 Flask-RESTful==0.3.5
 Flask-Script==2.0.5
@@ -17,6 +18,7 @@ PyJWT==1.4.0
 python-dateutil==2.5.0
 python-editor==0.5
 pytz==2016.1
+simplekv==0.10.0
 six==1.10.0
 SQLAlchemy==1.0.12
 Werkzeug==0.11.4
